# circleci-lesson

./: README.md  pyproject.toml
.circleci/: config.yml
api/: main.py
api/tests/: test_main.py
