[tool.poetry]
name = "circle-ci-lesson"
version = "0.1.0"
description = ""
authors = ["Justin Rice <jsrice7391@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
